# CogScale

./: README.md  pyproject.toml
baseline/: extracted_md.csv  extracted_sm.csv  launch_runs.sh  models.py  old_paper.tex  paper.md  paper2md  paper_tab.md  ref.bib  run.py  slurm.sl  slurm_ar.sl
baseline/results/: best_overall.md  mean_std.md  results.csv
baseline/results/esn_hp_opti/: report.md
baseline/results/run_4/: esn_10k_medium.csv  esn_ar.csv  esn_ih.csv  results_dynamical_transformer.csv  results_gru.csv  results_gru_associative_recall.csv  results_lstm.csv  results_lstm_associative_recall.csv  results_mamba.csv  results_mamba_associative_recall.csv  results_transformer_decoder.csv  results_transformer_decoder_associative_recall.csv  results_transformer_encdec.csv  results_transformer_encdec_associative_recall.csv  results_xlstm_associative_recall.csv  xlstm_1.csv  xlstm_2.csv
baseline/scripts/: models.py  run.py
cogscale/: __init__.py  evals.py  tasks.py
stream_dataset/: __init__.py  evals.py  tasks.py
wip/: explore_res.ipynb  plot.py  slurm.sl
wip/DT/: AttentionLayer.py  DynamicalTransformer.py  FeedForwardLayer.py  MemoryLayer.py
wip/DT/triton/chunked/: ssm_triton_chunked.py  test_ssm_triton.py
wip/DT/triton/complex/: ssm_triton_complex.py  test_ssm_triton.py
wip/DT/triton/fused/: ssm_triton_fused.py  test_ssm_triton.py
wip/DT/triton/multihead/: ssm_triton_multihead.py  test_ssm_triton.py
wip/DT/triton/parallel/: ssm_triton_par.py  test_ssm_triton.py
wip/DT/triton/sequential/: ssm_triton_seq.py  test_ssm_triton.py
