[project]
name = "cogscale"
version = "0.1.0"
description = "CogScale: Scalable Benchmark for Sequence Processing is a dataset of 14 diverse sequential tasks to assess neural networks’ memory. Scalable in complexity and sequence length, it covers pattern completion, copy tasks, forecasting, bracket matching, and sorting—ideal for comparing architectures on memory retention and sequential reasoning."
authors = [
    { name="Yannis Bendi-Ouis", email="yannis.bendiouis@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "numpy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
